# AgenticCommerceAgent

./: .env.example  .gitignore  README.md  eval_main.py  main.py  pyproject.toml  requirements.txt  setup.py  web_main.py
src/agentic_shopping_agent/: __init__.py  __main__.py  cli.py  config.py  eval_catalog.py  eval_cli.py  evals.py  models.py  prompting.py  ranking.py  service.py  watchlists.py  web_cli.py  web_ui.py  webapp.py
src/eval_type_backport/: __init__.py
tests/: test_cli.py  test_eval_type_backport.py  test_evals.py  test_prompting.py  test_ranking.py  test_service_security.py  test_watchlists.py  test_webapp.py
